--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <h2><a href="/view/">スコアボード</a></h2>
+    <h2><a href="./view/">スコアボード</a></h2>
 
     <div class="control-panel">
       <input type="text" id="p1_name_input" placeholder="Player 1 Name" />
